Added doctor, admin Apis
